--- a/milestone_2/Cable Extraction.ipynb
+++ b/milestone_2/Cable Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import time\n",
     "import logging\n",
+    "import pandas as pd\n",
     "\n",
     "# Visulatisation\n",
     "%matplotlib widget\n",
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
