--- a/milestone_2/Cable Extraction B.ipynb
+++ b/milestone_2/Cable Extraction B.ipynb
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import time\n",
     "import logging\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Visulatisation\n",
     "# %matplotlib widget\n",
@@ -30,8 +31,11 @@
     "from scipy import ndimage\n",
     "import cv2 as cv\n",
     "\n",
+    "import open3d as o3d\n",
     "from shapely.geometry import LineString\n",
     "\n",
+    "from multiprocessing import Pool\n",
+    "import pca\n",
     "import RANSAC\n",
     "\n",
     "from skimage.transform import probabilistic_hough_line, hough_line, hough_line_peaks"
@@ -130,121 +134,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Voxelization\n",
-    "def voxelize(points, mask, voxel_size, logger=False):\n",
+    "def voxelize(points, mask, voxel_size, return_voxel_points=False, logger=False):\n",
     "\n",
     "    # Voxelize point cloud\n",
     "    cloud = PyntCloud(pd.DataFrame(points[mask,:], columns=['x','y','z']))\n",
     "    voxelgrid_id = cloud.add_structure(\"voxelgrid\", size_x=voxel_size, size_y=voxel_size, size_z=voxel_size, regular_bounding_box=False)\n",
-    "    voxelgrid = cloud.structures[voxelgrid_id]\n",
+    "    voxel_grid = cloud.structures[voxelgrid_id]\n",
     "    if logger:\n",
-    "        print('Voxels per axis:',voxelgrid.x_y_z)\n",
-    "        print('Voxel size:',voxelgrid.shape)\n",
+    "        print('Voxels per axis:',voxel_grid.x_y_z)\n",
+    "        print('Voxel size:',voxel_grid.shape)\n",
     "\n",
-    "    return voxelgrid\n",
+    "    # Group points per voxel \n",
+    "    if return_voxel_points:\n",
+    "        pv_table = np.vstack([voxel_grid.voxel_n, np.arange(0,voxel_grid.voxel_n.shape[0])]).T\n",
+    "        pv_table = pv_table[pv_table[:, 0].argsort()]\n",
+    "        voxel_idx, voxel_idx_index = np.unique(pv_table[:, 0], return_index=True)\n",
+    "        voxel_points = np.split(pv_table[:, 1], voxel_idx_index[1:])\n",
     "\n",
-    "voxel_size = 1\n",
-    "voxel_grid = voxelize(points, mask, voxel_size)"
+    "        return voxel_grid, voxel_points, voxel_idx\n",
+    "    \n",
+    "    return voxel_grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "a = np.vstack([voxel_grid.voxel_n,np.arange(0,voxel_grid.voxel_n.shape[0])]).T\n",
-    "a = a[a[:, 0].argsort()]\n",
-    "voxel_points = np.split(a[:, 1], np.unique(a[:, 0], return_index=True)[1][1:])\n",
-    "voxel_ids = np.unique(a[:, 0], return_index=True)[0]\n",
-    "\n",
-    "# def b(voxel_grid):\n",
-    "#     df = pd.DataFrame({'voxels':voxel_grid.voxel_n})\n",
-    "#     voxel_points = df.groupby(by=df.voxels).groups\n"
+    "def multi_proc_eig(covariances):\n",
+    "    # Alternative: tqdm process_map(np.linalg.eig, covariances)\n",
+    "    with Pool() as pool:\n",
+    "        return pool.map(pca.eig, covariances)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def outlier_filter(points, mask=None, method='radius', voxelize=False, voxel_size=0.1, params=None):\n",
-    "    \"\"\"\n",
-    "    The work of this region growing algorithm is based on the comparison\n",
-    "    of the angles between the points normals.\n",
-    "    The same can also be performed in Python using scipy.spatial.cKDTree\n",
-    "    with query_ball_tree or query.\n",
-    "    \"\"\"\n",
+    "# Parameters\n",
+    "knn=30\n",
+    "radius=1\n",
+    "voxel_size=1\n",
     "\n",
-    "    # 1. Create mask and get ids of non-labelled\n",
-    "    label_mask = np.zeros(len(points),dtype=bool)\n",
-    "    if mask is None:\n",
-    "        mask = np.ones((len(points),), dtype=bool)\n",
-    "    mask_ids = np.where(mask)[0]\n",
+    "method = 'voxel'\n",
     "\n",
-    "    # Convert point cloud\n",
-    "    coords = np.vstack((points[mask, 0], points[mask, 1], points[mask, 2])).transpose()\n",
+    "if method == 'knn':\n",
     "    pcd = o3d.geometry.PointCloud()\n",
-    "    pcd.points = o3d.utility.Vector3dVector(coords)\n",
+    "    pcd.points = o3d.utility.Vector3dVector(points[mask])\n",
+    "    pcd.estimate_covariances(search_param=o3d.geometry.KDTreeSearchParamKNN(knn=30))\n",
+    "    covariances = np.asarray(pcd.covariances)\n",
+    "    eig_val_vec = multi_proc_eig(covariances)\n",
     "\n",
-    "    # Voxelize point cloud\n",
-    "    if voxelize: \n",
-    "        pcd, _, trace_ids = pcd.voxel_down_sample_and_trace(voxel_size=voxel_size, min_bound=pcd.get_min_bound(), max_bound=pcd.get_max_bound())\n",
-    "        trace_ids = np.asarray(trace_ids)\n",
+    "elif method == 'radius':\n",
+    "    pcd = o3d.geometry.PointCloud()\n",
+    "    pcd.points = o3d.utility.Vector3dVector(points[mask])\n",
+    "    pcd.estimate_covariances(search_param=o3d.geometry.KDTreeSearchParamRadius(radius=1))\n",
+    "    covariances = np.asarray(pcd.covariances)\n",
+    "    eig_val_vec = multi_proc_eig(covariances)\n",
     "\n",
-    "    # Remove outliers\n",
-    "    if method == 'voxel_radius':\n",
-    "\n",
-    "        if params is None:\n",
-    "            params = {'nb_points':1,'radius':0.5}\n",
-    "        _, non_outlier_ids = pcd.remove_radius_outlier(**params)\n",
-    "\n",
-    "    elif method == 'sor':\n",
-    "\n",
-    "        if params is None:\n",
-    "            params = {'nb_neighbors':4,'std_ratio':1}\n",
-    "        _, non_outlier_ids = pcd.remove_statistical_outlier(**params)\n",
-    "\n",
-    "    outlier_mask = np.ones(len(coords), dtype=bool)\n",
-    "    if voxelize:\n",
-    "        non_outlier_ids = trace_ids[non_outlier_ids].flatten()\n",
-    "    outlier_mask[non_outlier_ids] = False\n",
-    "    label_mask[mask_ids] = outlier_mask\n",
-    "\n",
-    "    return label_mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Distance-based neighborhood\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# k-Nearest Neighbours neighbourhood"
+    "elif method == 'voxel':\n",
+    "    voxel_grid, voxel_point_idx, voxel_idx = voxelize(points, mask, voxel_size=1, return_voxel_points=True)\n",
+    "    voxel_table = {k: v for v, k in enumerate(voxel_idx)}\n",
+    "    covariances = [np.cov(points[mask][idx], rowvar=False) for idx in voxel_point_idx]\n",
+    "    voxel_eig_val_vec = multi_proc_eig(covariances)\n",
+    "    eig_val_vec = [voxel_eig_val_vec[voxel_table[voxel_id]] for voxel_id in voxel_grid.voxel_n]"
    ]
   },
   {
@@ -257,10 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
+    "assert len(eig_val_vec) == len(points[mask])\n",
+    "\n",
     "# TODO: Code"
    ]
   },
@@ -325,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.9"
   },
   "orig_nbformat": 4
  },
