Update Cable Extraction B.ipynb

--- a/milestone_2/Cable Extraction B.ipynb
+++ b/milestone_2/Cable Extraction B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "# Visulatisation\n",
-    "# %matplotlib widget\n",
+    "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import set_path\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "8486"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
     "    cc_labels[np.where(cable_mask)[0][c_mask]] = cl+1\n",
     "\n",
     "# Update cable mask and labels\n",
-    "cluster_labels, counts = np.unique(clustering.labels_, return_counts=True)\n",
+    "cluster_labels, counts = np.unique(cc_labels, return_counts=True)\n",
     "cable_mask[cc_labels == 0] = False\n",
     "\n",
     "# fig = plt.figure()\n",
@@ -741,6 +741,203 @@
    "source": [
     "#### Step 4: Merge cable segments\n",
     "Use cable segment properties to determine if cable segments belong to the same cable. Features which can be used: direction, height, and catenary fit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyransac3d as pyrsc\n",
+    "\n",
+    "def unit_vector(vector):\n",
+    "    return vector / np.linalg.norm(vector)\n",
+    "\n",
+    "def angle_between(v1, v2):\n",
+    "    \"\"\" Returns the angle in radians between vectors 'v1' and 'v2'\"\"\"\n",
+    "    v1_u = unit_vector(v1)\n",
+    "    v2_u = unit_vector(v2)\n",
+    "    return np.rad2deg(np.arccos(np.clip(np.dot(v1_u, v2_u), -1.0, 1.0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_directions = {}\n",
+    "for cl_label in cluster_labels[1:]:\n",
+    "    RANSAC_straight_line = pyrsc.Line()\n",
+    "    line_directions[cl_label] = RANSAC_straight_line.fit(points[mask][cc_labels == cl_label], thresh=0.2, maxIteration=100)[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now: 9.0\n",
+      "\tchecking 8.0 / angle: 179.43  / inlier per: 0.0\n",
+      "\tchecking 6.0 / angle: 1.88  / inlier per: 0.27245508982035926\n",
+      "\tchecking 10.0 / angle: 179.89  / inlier per: 0.0\n",
+      "\tchecking 4.0 / angle: 179.67  / inlier per: 0.0\n",
+      "\tchecking 7.0 / angle: 175.65  / inlier per: 0.0\n",
+      "\tchecking 5.0 / angle: 179.67  / inlier per: 0.0\n",
+      "\tchecking 3.0 / angle: 1.79  / inlier per: 0.0\n",
+      "\tchecking 11.0 / angle: 0.07  / inlier per: 0.0\n",
+      "Now: 8.0\n",
+      "\tchecking 6.0 / angle: 177.55  / inlier per: 0.0\n",
+      "\tchecking 10.0 / angle: 0.45  / inlier per: 0.0\n",
+      "\tchecking 4.0 / angle: 0.23  / inlier per: 1.0\n",
+      "Added cluster 4.0 to 8.0\n",
+      "\tchecking 7.0 / angle: 4.66  / inlier per: 0.0\n",
+      "\tchecking 5.0 / angle: 0.02  / inlier per: 0.0\n",
+      "\tchecking 3.0 / angle: 177.9  / inlier per: 0.6687306501547987\n",
+      "Added cluster 3.0 to 8.0\n",
+      "\tchecking 11.0 / angle: 0.02  / inlier per: 0.0\n",
+      "Now: 6.0\n",
+      "\tchecking 10.0 / angle: 178.0  / inlier per: 0.0\n",
+      "\tchecking 7.0 / angle: 177.53  / inlier per: 0.0\n",
+      "\tchecking 5.0 / angle: 177.79  / inlier per: 0.721627408993576\n",
+      "Added cluster 5.0 to 6.0\n",
+      "\tchecking 11.0 / angle: 1.39  / inlier per: 0.0\n",
+      "Now: 10.0\n",
+      "\tchecking 7.0 / angle: 4.47  / inlier per: 0.04294478527607362\n",
+      "\tchecking 11.0 / angle: 179.96  / inlier per: 0.0\n",
+      "Now: 7.0\n",
+      "\tchecking 11.0 / angle: 175.58  / inlier per: 0.20955882352941177\n",
+      "Now: 13.0\n",
+      "\tchecking 14.0 / angle: 179.07  / inlier per: 1.0\n",
+      "Added cluster 14.0 to 13.0\n",
+      "Now: 11.0\n",
+      "Now: 1.0\n",
+      "\tchecking 2.0 / angle: 177.65  / inlier per: 1.0\n",
+      "Added cluster 2.0 to 1.0\n",
+      "\tchecking 17.0 / angle: 4.85  / inlier per: 0.0\n",
+      "Now: 18.0\n",
+      "\tchecking 20.0 / angle: 0.52  / inlier per: 1.0\n",
+      "Added cluster 20.0 to 18.0\n",
+      "\tchecking 19.0 / angle: 4.31  / inlier per: 0.0\n",
+      "\tchecking 17.0 / angle: 179.31  / inlier per: 1.0\n",
+      "Added cluster 17.0 to 18.0\n",
+      "Now: 16.0\n",
+      "\tchecking 12.0 / angle: 3.16  / inlier per: 1.0\n",
+      "Added cluster 12.0 to 16.0\n",
+      "\tchecking 19.0 / angle: 179.55  / inlier per: 1.0\n",
+      "Added cluster 19.0 to 16.0\n",
+      "Now: 21.0\n",
+      "Now: 15.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster_labels, counts = np.unique(cc_labels, return_counts=True)\n",
+    "cable_mask[cc_labels == 0] = False\n",
+    "cluster_labels_sorted = list(cluster_labels[1:][counts[1:].argsort()[::-1]])\n",
+    "\n",
+    "while len(cluster_labels_sorted) > 0:\n",
+    "    current_label = cluster_labels_sorted[0]\n",
+    "    print('Now:',current_label)\n",
+    "    candidate_labels = cluster_labels_sorted[1:]\n",
+    "    current_pts = points[mask][cc_labels == current_label]\n",
+    "\n",
+    "    for candidate_label in candidate_labels:\n",
+    "        \n",
+    "        candidate_v, candidate_i = line_directions[candidate_label]\n",
+    "        current_v, current_i = line_directions[current_label]\n",
+    "\n",
+    "        # Same direction\n",
+    "        angle = angle_between(candidate_v[:2], current_v[:2])\n",
+    "        if angle < 5 or angle > 175:\n",
+    "            \n",
+    "            # Distance from a point to a line\n",
+    "            candidate_pts = points[mask][cc_labels == candidate_label]\n",
+    "            vecC_stakado = np.stack([current_v[:2]] * len(candidate_pts), 0)\n",
+    "            dist_pta = np.cross(vecC_stakado, (current_i[:2] - candidate_pts[:,:2]))\n",
+    "            per_inliers = np.sum(np.abs(dist_pta) <= 0.25) / len(candidate_pts)\n",
+    "\n",
+    "            # On same line\n",
+    "            print('\\tchecking',candidate_label, '/ angle:',round(angle,2), ' / inlier per:',per_inliers)\n",
+    "            if per_inliers > 0.33:\n",
+    "                # print(per_inliers)\n",
+    "                # fig = plt.figure()\n",
+    "                # ax = plt.axes()\n",
+    "                # ax.scatter((current_i[0] - candidate_pts[:,0]),(current_i[1] - candidate_pts[:,1]), s=1)\n",
+    "                # ax.scatter((current_i[0] - current_pts[:,0]),(current_i[1] - current_pts[:,1]), s=1, color='red')\n",
+    "\n",
+    "                # Merge:\n",
+    "                cc_labels[cc_labels == candidate_label] = current_label\n",
+    "                current_pts = np.vstack([current_pts, candidate_pts])\n",
+    "                RANSAC_straight_line = pyrsc.Line()\n",
+    "                line_directions[current_label] = RANSAC_straight_line.fit(current_pts, thresh=0.2, maxIteration=100)[:2]\n",
+    "                cluster_labels_sorted.remove(candidate_label)\n",
+    "                print('Added cluster', candidate_label, 'to',current_label)\n",
+    "    \n",
+    "    # Remove cluster from list\n",
+    "    cluster_labels_sorted.remove(current_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "738f2030bc3c4f06be24c019627bb856",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = plt.axes(projection='3d')\n",
+    "for cl in set(cc_labels).difference((0,)):\n",
+    "    cluster_mask = cc_labels == cl\n",
+    "    ax.scatter(points[mask][cluster_mask][:,0],points[mask][cluster_mask][:,1],points[mask][cluster_mask][:,2], s=4, label=str(cl))\n",
+    "ax.set_zlim((0,12))\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step: Cable Growing"
    ]
   },
   {
@@ -1094,16 +1291,7 @@
    "execution_count": 87,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def unit_vector(vector):\n",
-    "    return vector / np.linalg.norm(vector)\n",
-    "\n",
-    "def angle_between(v1, v2):\n",
-    "    \"\"\" Returns the angle in radians between vectors 'v1' and 'v2'\"\"\"\n",
-    "    v1_u = unit_vector(v1)\n",
-    "    v2_u = unit_vector(v2)\n",
-    "    return np.rad2deg(np.arccos(np.clip(np.dot(v1_u, v2_u), -1.0, 1.0)))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1292,6 +1480,13 @@
    "source": [
     "dir_v\n",
     "#math_utils.vector_angle()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### export"
    ]
   },
   {
