--- a/milestone_2/Cable Extraction B.ipynb
+++ b/milestone_2/Cable Extraction B.ipynb
@@ -34,6 +34,8 @@
     "\n",
     "import open3d as o3d\n",
     "from shapely.geometry import LineString\n",
+    "import shapely \n",
+    "from scipy.optimize import curve_fit\n",
     "\n",
     "from multiprocessing import Pool\n",
     "import pca\n",
@@ -677,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,6 +773,184 @@
     "for cl_label in cluster_labels[1:]:\n",
     "    RANSAC_straight_line = pyrsc.Line()\n",
     "    line_directions[cl_label] = RANSAC_straight_line.fit(points[mask][cc_labels == cl_label], thresh=0.2, maxIteration=100)[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a044ccf4229340d9829ecbee684ceedb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7fc90fb86ee0>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "current_label = 20\n",
+    "candidate_labels = [17,18]\n",
+    "current_pts = points[mask][cc_labels == current_label]\n",
+    "\n",
+    "#for candidate_label in candidate_labels:\n",
+    "candidate_label = 18\n",
+    "candidate_v, candidate_i = line_directions[candidate_label]\n",
+    "current_v, current_i = line_directions[current_label]\n",
+    "    \n",
+    "# Distance from a point to a line\n",
+    "candidate_pts = points[mask][cc_labels == candidate_label]\n",
+    "vecC_stakado = np.stack([current_v[:2]] * len(candidate_pts), 0)\n",
+    "dist_pta = np.cross(vecC_stakado, (current_i[:2] - candidate_pts[:,:2]))\n",
+    "per_inliers = np.sum(np.abs(dist_pta) <= 0.25) / len(candidate_pts)\n",
+    "\n",
+    "# Fill Gap\n",
+    "s_line_1 = math_utils.convex_hull_poly(current_pts)\n",
+    "s_line_2 = math_utils.convex_hull_poly(candidate_pts)\n",
+    "merge_gap = LineString(shapely.ops.nearest_points(s_line_1, s_line_2)).buffer(.1)\n",
+    "gap_length = merge_gap.length\n",
+    "gap_mask = clip_utils.poly_clip(points[mask][~cable_mask], merge_gap)\n",
+    "gap_points = points[mask][~cable_mask][gap_mask]\n",
+    "\n",
+    "# On same line\n",
+    "fig = plt.figure()\n",
+    "ax = plt.axes(projection='3d')\n",
+    "ax.scatter(candidate_pts[:,0], candidate_pts[:,1], candidate_pts[:,2], s=1)\n",
+    "#candidate_pts = points[mask][cc_labels == 17]\n",
+    "#ax.scatter(candidate_pts[:,0], candidate_pts[:,1], candidate_pts[:,2], s=1)\n",
+    "ax.scatter(current_pts[:,0], current_pts[:,1], current_pts[:,2], s=1, color='red')\n",
+    "ax.scatter(gap_points[:,0], gap_points[:,1], gap_points[:,2], s=1, color='grey')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_direction(points):\n",
+    "    cov = np.cov(points, rowvar=False)\n",
+    "    eig_val, eig_vec = np.linalg.eig(cov)\n",
+    "    return eig_vec[:,eig_val.argmax()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Catenary Curve fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def catenary_func(x, a, b, c):\n",
+    "    return a + c * np.cosh((x-b) / c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "344d6c2eb18b46d5abb07823f9a1b634",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7fc8fd7b6f10>"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pts = np.vstack([candidate_pts, current_pts])\n",
+    "cable_dir = main_direction(pts[:,:2])\n",
+    "d_pts = np.dot(pts[:,:2], cable_dir)\n",
+    "d_min = d_pts.min()\n",
+    "d_pts -= d_min\n",
+    "z_pts = pts[:,2]\n",
+    "\n",
+    "d_gap_pts = np.dot(gap_points[:,:2], cable_dir)# - d_min\n",
+    "z_gap_pts = gap_points[:,2]\n",
+    "\n",
+    "d_all_pts = np.hstack([d_pts, d_gap_pts])\n",
+    "z_all_pts = np.hstack([z_pts, z_gap_pts])\n",
+    "\n",
+    "# popt, pcov = curve_fit(func, d_all_pts, z_all_pts) # Use all points\n",
+    "popt, pcov = curve_fit(catenary_func, d_pts, z_pts)\n",
+    "\n",
+    "# Evaluate Gap\n",
+    "dist_gap_z = abs(catenary_func(d_gap_pts, *popt) - z_gap_pts)\n",
+    "gap_inliers = dist_gap_z < 0.15\n",
+    "gap_pts_inliers = gap_points[dist_gap_z < 0.2]\n",
+    "gap_pts_outliers = gap_points[dist_gap_z > 0.2]\n",
+    "\n",
+    "per_gap = np.sum(gap_inliers) / len(gap_points)\n",
+    "\n",
+    "# Evaluate original\n",
+    "dist_z = abs(catenary_func(d_pts, *popt) - z_pts)\n",
+    "inliers = dist_z < 0.2\n",
+    "\n",
+    "per_original = np.sum(inliers) / len(inliers)\n",
+    "\n",
+    "print(per_gap, per_original)\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = plt.axes(projection='3d')\n",
+    "ax.scatter(pts[:,0], pts[:,1], pts[:,2], s=1, color='grey')\n",
+    "ax.scatter(gap_pts_outliers[:,0], gap_pts_outliers[:,1], gap_pts_outliers[:,2], s=1, color='red')\n",
+    "ax.scatter(gap_pts_inliers[:,0], gap_pts_inliers[:,1], gap_pts_inliers[:,2], s=1, color='green')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Other"
    ]
   },
   {
