Demo tile update

--- a/notebooks/AHN preprocessing.ipynb
+++ b/notebooks/AHN preprocessing.ipynb
@@ -42,7 +42,7 @@
     "# Set-up.\n",
     "\n",
     "# The point cloud tile for which a corresponding AHN tile should be created.\n",
-    "tile_code = '2352_9744'\n",
+    "tile_code = '2397_9705'\n",
     "filename = '../demo_dataset/pointcloud/labelled' + tile_code + '.laz'\n",
     "\n",
     "# The folder where AHN data will be saved.\n",
@@ -66,7 +66,7 @@
    "source": [
     "# Download the corresponding AHN cloud from \n",
     "# https://geotiles.nl/\n",
-    "!wget https://geotiles.nl/AHN4_T/25DN2_03.LAZ -P ../demo_dataset/"
+    "!wget https://geotiles.nl/AHN4_T/25DN2_10.LAZ -P ../demo_dataset/"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "source": [
     "# Load the AHN point cloud.\n",
     "# WARNING: this may require 16+ GB of RAM, depending on the size of the cloud.\n",
-    "ahn_cloud_file = '../demo_dataset/ahn/25DN2_03.LAZ'\n",
+    "ahn_cloud_file = '../demo_dataset/25DN2_10.LAZ'\n",
     "ahn_cloud = las_utils.read_las(ahn_cloud_file)"
    ]
   },
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tile_code = '2352_9744'"
+    "tile_code = '2397_9705'"
    ]
   },
   {
@@ -226,13 +226,10 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "390886f3f81e300e2621f4c952c78d7a6816557893aa043bafdff5407f61cff5"
-  },
   "kernelspec": {
-   "display_name": ".point_cloud",
+   "display_name": "Python 3.9.9 ('.point_cloud': venv)",
    "language": "python",
-   "name": ".point_cloud"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -245,6 +242,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "631806e10756e17fc0fd7ada305726dc7821d90278ba721d2afe07aa2cf1effd"
+   }
   }
  },
  "nbformat": 4,
