--- a/notebooks/Complete solution.ipynb
+++ b/notebooks/Complete solution.ipynb
@@ -235,8 +235,8 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "tile_code = '2352_9744'\n",
-    "in_file = folder + '/pointcloud/labelled_' + tile_code + '.laz'\n",
+    "tile_code = '2397_9705'\n",
+    "in_file = folder + '/pointcloud/filtered_' + tile_code + '.laz'\n",
     "out_file = folder + '/pointcloud/processed_' + tile_code + '.laz'"
    ]
   },
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline.process_folder(in_folder=folder+'/pointcloud/', in_prefix='labelled_', out_prefix='processed_', in_labels=False)"
+    "pipeline.process_folder(in_folder=folder+'/pointcloud/', in_prefix='filtered_', out_prefix='processed_', in_labels=False)"
    ]
   },
   {
@@ -308,14 +308,6 @@
     "plot_utils.plot_bgt_bag_and_cloudslice(tile_code, out_file, ahn_reader, building_file=bag_building_file,\n",
     "                                   tram_file=bgt_tramtrack_file, min_plane_height=4.5, max_plane_height=12, hide_noise=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51fb28c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
