--- a/notebooks/Generate reference data.ipynb
+++ b/notebooks/Generate reference data.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Single file\n",
-    "tilecode = '2352_9744'\n",
+    "tilecode = '2397_9705'\n",
     "bbox = las_utils.get_bbox_from_tile_code(tilecode, padding=5)"
    ]
   },
@@ -121,10 +121,10 @@
    "source": [
     "\n",
     "# Scrape data from the WFS, this will return a json response.\n",
-    "json_response = ams_bag_scrapper.scrape_amsterdam_bag(bag_layer, bbox=bbox)\n",
+    "json_response = ams_bag_scraper.scrape_amsterdam_bag(bag_layer, bbox=bbox)\n",
     "\n",
     "# Parse the downloaded json response.\n",
-    "parsed_content, _ = ams_bag_scrapper.parse_polygons(json_response)\n",
+    "parsed_content, _ = ams_bag_scraper.parse_polygons(json_response)\n",
     "\n",
     "# Write the csv\n",
     "csv_utils.write_csv(bag_data_file, parsed_content, csv_headers)"
@@ -152,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".point_cloud",
+   "display_name": "Python 3.9.9 ('.point_cloud': venv)",
    "language": "python",
-   "name": ".point_cloud"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
